Fix touch issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,13 @@ body {
   margin: 0;
 }
 
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+button {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.2);
+}
+
 .item {
   background-color: #FFC466;
   border-radius: 8px;
@@ -55,6 +62,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
+  touch-action: manipulation;
 }
 
 button:active {
